--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>slider</title>
 </head>
 <body>
-    <header class="header">
+<header class="header">
         <a href="#" ><img src="./Img/logo.png" class="logo"></a>
         <ul class="nav">
             <li><a href="#home">home</a></li>
@@ -30,44 +30,44 @@
             <li><a href="#contact">contact</a></li>
         </ul>
         <i class="fas fa-bars" id="menuBtn"></i>
-    </header>
+</header>
 
-    <!-- home starts here  -->
-    <section class="home" id="home">
+<!-- home starts here  -->
+<section class="home" id="home">
         <div class="swiper home-slider">
 
             <div class="swiper-wrapper ">
 
                 <div class="swiper-slide box" style="background: url('./Img/drone1.jpg');">
-                    <div class="content">
+                    <!-- <div class="content">
                         <h3>Header here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga vel neque ea recusandae odit quae, numquam itaque repellat at esse voluptates inventore atque nesciunt voluptatem quaerat harum minus dolore ratione.</p>
                         <a href="#" class="btn">view more</a>
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="swiper-slide box" style="background: url('./Img/drone2.jpg');">
-                    <div class="content">
+                    <!-- <div class="content">
                         <h3>Header here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga vel neque ea recusandae odit quae, numquam itaque repellat at esse voluptates inventore atque nesciunt voluptatem quaerat harum minus dolore ratione.</p>
                         <a href="#" class="btn">view more</a>
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="swiper-slide box" style="background: url('./Img/drone3.jpg');">
-                    <div class="content">
+                    <!-- <div class="content">
                         <h3>Header here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga vel neque ea recusandae odit quae, numquam itaque repellat at esse voluptates inventore atque nesciunt voluptatem quaerat harum minus dolore ratione.</p>
                         <a href="#" class="btn">view more</a>
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="swiper-slide box" style="background: url('./Img/drone5.jpg');">
-                    <div class="content">
+                    <!-- <div class="content">
                         <h3>Header here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga vel neque ea recusandae odit quae, numquam itaque repellat at esse voluptates inventore atque nesciunt voluptatem quaerat harum minus dolore ratione.</p>
                         <a href="#" class="btn">view more</a>
-                    </div>
+                    </div> -->
 
                 </div>
 
@@ -88,7 +88,7 @@
             <div class="content">
                 <img src="./Img/wedding 1.jpg" alt="">
                 <h3>wedding</h3>
-                <a href="#" class="btn">View more</a>
+                <a href="wedding.html" class="btn">View more</a>
             </div>
             <div class="content">
                 <img src="./Img/special occasion 1.png" alt="">
@@ -129,8 +129,8 @@
             <div class="price-box">
                 <h3>basic package</h3>
                 <div class="price">
-                    <p class="figure"> <span>₵</span>30</p>
-                    <p class="duration">per month</p>
+                    <p class="figure"> <span>₵</span>200</p>
+                    <!-- <p class="duration">per month</p> -->
                 </div>
                 <p class="time">1hr service</p>
                 <!-- <a href="#" class="btn"></a> -->
@@ -138,19 +138,19 @@
             <div class="price-box">
                 <h3>deluxe package</h3>
                 <div class="price">
-                    <p class="figure"> <span>₵</span>60.99</p>
-                    <p class="duration">per month</p>
+                    <p class="figure"> <span>₵</span>450</p>
+                    <!-- <p class="duration">per month</p> -->
                 </div>
-                <p class="time">3hr service</p>
+                <p class="time">2hr service</p>
                 <!-- <a href="#" class="btn"></a> -->
             </div>
             <div class="price-box">
                 <h3>pro package</h3>
                 <div class="price">
-                    <p class="figure"> <span>₵</span>90.99</p>
-                    <p class="duration">per month</p>
+                    <p class="figure"> <span>₵</span>700</p>
+                    <!-- <p class="duration">per month</p> -->
                 </div>
-                <p class="time">6hr service</p>
+                <p class="time">3hr service</p>
                 <!-- <a href="#" class="btn"></a> -->
             </div>
             
@@ -170,10 +170,10 @@
             </div>
 
             <div class="content">
-                <h3>more about us</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rerum, ut commodi harum sint eveniet totam beatae sunt id dolorum cumque ullam, repellendus doloremque quo vel eaque minus facilis molestiae?
-                Aspernatur enim a quod, temporibus aperiam libero blanditiis id accusantium quos inventore odit quisquam cum dolores incidunt voluptatibus commodi placeat tenetur. Doloribus quaerat nobis esse voluptatem laborum! Debitis, ducimus est!
-                Nihil itaque et incidunt error iure nisi recusandae in modi, dignissimos adipisci alias, soluta commodi placeat, optio facere? Possimus culpa nobis magni dolorum tenetur asperiores perferendis nulla commodi consequuntur numquam!</p>
+                <p>DroneIt specializes in drone services for commercial, private, cinematic movies, and video services.
+                    Whatever service you need, we will give you the best shot to suit your needs. 
+                    We can help choose the perfect angles for your aerial filming, video surveying and any service you may require. 
+                    We provide safe, better and price competitive services that yields better income</p>
             </div>
 
         </div>
@@ -198,8 +198,8 @@
         </div>
     </section>
 
-    <!-- footer starts  -->
-        <section class="footer">
+<!-- footer starts  -->
+<section class="footer">
             <div class="footer-container">
 
                 <div class="footer-item">
@@ -264,3 +264,4 @@
 
 </body>
 </html>
+
